# telega_project

./: .gitignore  .gitmodules  .mxproject  360_controller_map.h  BMRS-CODE.001.SPL_Keil_BLDC_Driver.uvprojx  CMakeLists.txt  README.md  cobs.c  compile.sh  odroid_test_analog.c  odroid_test_analog_origine.c  robot_defines.h  sensors.h  telega.ioc
BMRS-CODE_001_SPL_Keil_BLDC_Driver-master_28_01_2020/BMRS-CODE.001.SPL_Keil_BLDC_Driver-master/: BMRS-CODE.001.SPL_Keil_BLDC_Driver.uvprojx
CameraPlatform/: .mxproject  CameraPlatform.ioc
Inc/: stm32f1xx_it.h
Keil_STM32F103_3xUart_16_03_20_AG/: 3xUart.ioc
MDK-ARM/: startup_stm32f103xb.lst  telega.uvguix.Andrey  telega.uvguix.Андрей  telega.uvoptx  telega.uvprojx
QtGUI_Platform_withPath_23_03_20_AG/: Makefile  Makefile.Debug  Makefile.Release  QtGUI_NoFrost_Parsed.pro  QtGUI_NoFrost_Parsed.pro.user.0264fb5  QtGUI_NoFrost_Parsed.pro.user.0264fb5.22  QtGUI_NoFrost_Parsed.pro.user.285cfdd  QtGUI_NoFrost_Parsed.pro.user.285cfdd.4.10-pre1  QtGUI_NoFrost_Parsed.pro.user.rKDpLL  counter.cpp  counter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h  timerthread.cpp  timerthread.h  ui_mainwindow.h  ui_mainwindow1.h
Src/: cobs.c  cobs.h  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
UART_CHANGER_ANDREY/: CAMtastic1.Cam  CAMtastic2.Cam  UART_CHANGER.OutJob  UART_CHANGER.SchDoc  UART_CHANGER_ANDREY.PcbDoc  UART_CHANGER_ANDREY.PrjPcb  UART_CHANGER_INDICATION.SchDoc
arduino/: Robot_Arduino_code_Timer_steppers.ino  steppers.h
full_featured_RC/: cpy_start.sh  odroid_test_analog.c  robot_defines.h  sensors.h
(+263 files in other folders)
